feedingServiceImpl with all tasks done